--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ cache:
     - node_modules
 script:
   - npm run build
-  - npm test 
+  - npm test -- u --coverage --coverageReporters=text-lcov | coveralls
+
+after_success:
+  - npm run coveralls
