--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
     "dot-prop": "^4.2.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^4.2.0",
+    "dotenv-webpack": "^1.7.0",
     "duplexer": "^0.1.1",
     "duplexify": "^3.6.1",
     "ecc-jsbn": "^0.1.2",
@@ -290,7 +291,7 @@
     "escape-html": "^1.0.3",
     "escape-string-regexp": "^1.0.5",
     "escodegen": "^1.11.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.13.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-loader": "^2.1.1",
@@ -422,7 +423,7 @@
     "html-encoding-sniffer": "^1.0.2",
     "html-entities": "^1.2.1",
     "html-minifier": "^3.5.21",
-    "html-webpack-plugin": "^4.0.0-alpha.2",
+    "html-webpack-plugin": "^3.2.0",
     "htmlparser2": "^3.10.0",
     "http-deceiver": "^1.2.7",
     "http-errors": "^1.6.3",
@@ -931,6 +932,7 @@
     "rgba-regex": "^1.0.0",
     "rimraf": "^2.6.3",
     "ripemd160": "^2.0.2",
+    "router": "^1.3.3",
     "rst-selector-parser": "^2.2.3",
     "rsvp": "^3.6.2",
     "run-async": "^2.3.0",
@@ -1149,10 +1151,11 @@
   },
   "scripts": {
     "coveralls": "test",
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode production",
+    "build": "webpack --mode development",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint src/**/*.js src/**/*.jsx"
   },
   "repository": {
     "type": "git",
