--- a/package.json
+++ b/package.json
@@ -323,6 +323,7 @@
     "expand-tilde": "^2.0.2",
     "expect": "^23.6.0",
     "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "extend": "^3.0.2",
     "extend-shallow": "^2.0.1",
     "external-editor": "^3.0.3",
@@ -336,6 +337,7 @@
     "faye-websocket": "^0.10.0",
     "fb-watchman": "^2.0.0",
     "fbjs": "^0.8.17",
+    "fetch-mock": "^7.3.0",
     "figgy-pudding": "^3.5.1",
     "figures": "^2.0.0",
     "file-entry-cache": "^2.0.0",
@@ -732,6 +734,7 @@
     "parse5": "^3.0.3",
     "parseurl": "^1.3.2",
     "pascalcase": "^0.1.1",
+    "path": "^0.12.7",
     "path-browserify": "^0.0.0",
     "path-dirname": "^1.0.2",
     "path-exists": "^3.0.0",
@@ -883,7 +886,7 @@
     "react-test-renderer": "^16.7.0",
     "react-text-mask": "^5.4.1",
     "react-themeable": "^1.1.0",
-    "react-toastify": "^3.4.3",
+    "react-toastify": "^4.5.2",
     "react-transition-group": "^2.5.3",
     "read-pkg": "^2.0.0",
     "read-pkg-up": "^2.0.0",
@@ -1151,7 +1154,7 @@
   },
   "scripts": {
     "coveralls": "test",
-    "start": "webpack-dev-server --mode production",
+    "start": "node server.js",
     "build": "webpack --mode development",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
