--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
 language: node_js
 node_js:
-  - "lts/*"
+  - "stable"
 cache:
   directories:
     - node_modules
+ env:
+  global:
+    - CC_TEST_REPORTER_ID=7f6c30ad416a5139993f2cfb9853f953941a0437338a905d324df2b664fdb309
 install:
-  - yarn
+  - yarn run build
+  - yarn run start & wait-on http://localhost:3000
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
-  - yarn test
+   - yarn test
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  
